# EPICS-forward_epics_to_kafka

./: .gitignore  CMakeLists.txt  Makefile.epics
EPICSApp/src/: Makefile
cmake/: FindEPICSV4.cmake  FindGitCommitExtract.cmake  FindStreamingDataTypes.cmake
configure/: RELEASE
src/: CMakeLists.txt  Main.cxx  Main.h  MainOpt.cpp  MainOpt.cxx  Streams.cpp  Streams.h
